--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,15 @@ code {
     monospace;
 }
 
-.large.text {
+.poem.text {
   font-size: 20px;
   color: black;
   text-align: center;
+  /* font-family: 'Roboto'; */
+  margin-top: 100px;
 }
 
+.large.text {
+  color: black;
+  text-align: center;
+}
