--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,20 +9,31 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
 
 .poem.text {
   font-size: 20px;
-  color: black;
+  /* color: black; */
   text-align: center;
-  /* font-family: 'Roboto'; */
+  font-family: 'Roboto', sans-serif;
   margin-top: 100px;
+  background-color: rgb(63, 11, 77);
+  color: #fff; 
+  display: inline;
+  padding: 0.5rem;
+  
+  /* Needs prefixing */
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
 }
 
 .large.text {
   color: black;
   text-align: center;
+  font-family: 'Roboto', sans-serif;
+  -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-color: rgb(203, 228, 81);
+  
 }
+
+/* body {background-color: coral;} */
